card.io is open source
* Drop "Try it" section.
* card.io is now free like beer AND speech!
* Move "Free" section to top.
* Link to both SDK and source from "Free" section.
  Leave the top right SDK only to prevent clutter.

--- a/static/css/card.io.css
+++ b/static/css/card.io.css
@@ -6534,6 +6534,9 @@ div.press .releases a {
 .beer {
   background-image: url("/static/images/beers.png");
 }
+.speech {
+  background-image: url("/static/images/speech.png");
+}
 .emoji {
   text-indent: -10000px;
   background-color: transparent;
